fix: hide bubel chat btn on mobile view

--- a/packages/webapp/styles/_mobile.scss
+++ b/packages/webapp/styles/_mobile.scss
@@ -139,6 +139,9 @@
       }
     }
   }
+  .btnDesktopChatBox {
+    display: none;
+  }
 }
 
 .btn_bigBluePencil {
